Add stats interface

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,5 +3,8 @@ head
   title Hello, World?
 body
   h1 Hello, World!
+  p=JSON.stringify(incoming)
+  p=JSON.stringify(caught)
+  p=JSON.stringify(sources)
 
   script(src='js/index.js')
