Report number of ad domains

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,5 +6,6 @@ body
   p=JSON.stringify(incoming)
   p=JSON.stringify(caught)
   p=JSON.stringify(sources)
+  p=adUrls
 
   script(src='js/index.js')
