--- a/views/index.pug
+++ b/views/index.pug
@@ -1,11 +1,265 @@
 doctype html
-head
-  title Hello, World?
-body
-  h1 Hello, World!
-  p=JSON.stringify(incoming)
-  p=JSON.stringify(caught)
-  p=JSON.stringify(sources)
-  p=adUrls
+html(lang='en')
+  head
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(name='description', content='')
+    meta(name='author', content='Dashboard')
+    meta(name='keyword', content='Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina')
+    title Node DNS Admin
+    // Bootstrap core CSS
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
+    // external css
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
+    link(rel='stylesheet', type='text/css', href='assets/lineicons/style.css')
+    // Custom styles for this template
+    link(href='assets/css/style.css', rel='stylesheet')
+    link(href='assets/css/style-responsive.css', rel='stylesheet')
+    script(src='assets/js/chart-master/Chart.js')
 
-  script(src='js/index.js')
+    // HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
+    //if lt IE 9
+      script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
+      script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
+  body
+    section#container
+      header.header.black-bg
+        .sidebar-toggle-box
+          .fa.fa-bars.tooltips(data-placement='right', data-original-title='Toggle Navigation')
+        a.logo(href='index.html')
+          b Node DNS Admin
+
+      //MAIN SIDEBAR MENU
+      // sidebar start
+      aside
+        #sidebar.nav-collapse
+          // sidebar menu start
+          ul#nav-accordion.sidebar-menu
+            p.centered
+              a(href='profile.html')
+                img.img-circle(src='assets/img/ui-sam.jpg', width='60')
+            h5.centered Dashboard
+            li.mt
+              a.active(href='index.html')
+                i.fa.fa-dashboard
+                span Dashboard
+            li.sub-menu
+              a(href='javascript:;')
+                i.fa.fa-cog
+                span Configuration
+              ul.sub
+                li
+                  a(href='#config-general') General
+                li
+                  a(href='#config-blacklist') Blacklist
+                li
+                  a(href='#config-whitelist') Whitelist
+          // sidebar menu end
+      // sidebar end
+      //
+        ******* MAIN CONTENT ********
+      // main content start
+      section#main-content
+        section.wrapper
+          .row
+            .col-lg-12.main-chart
+              .row.mtbox
+                .col-md-2.col-sm-2.col-md-offset-1.box0
+                  .box1
+                    span.fa.fa-hand-stop-o
+                    h3=caught.total
+                  p Ads blocked today
+                .col-md-2.col-sm-2.box0
+                  .box1
+                    span.fa.fa-globe
+                    h3=incoming.total
+                  p DNS queries today
+                .col-md-2.col-sm-2.box0
+                  .box1
+                    span.fa.fa-pie-chart
+                    - var percent = ((caught.total / incoming.total) * 100).toFixed(2) + '%'
+                    h3=percent
+                  p Of todays traffic was ads
+                .col-md-2.col-sm-2.box0
+                  .box1
+                    span.fa.fa-list
+                    h3=adUrls
+                  p Domains blocked
+                .col-md-2.col-sm-2.box0
+                  .box1
+                    span.fa.fa-check-circle-o
+                    h3 OK!
+                  p Your server is working perfectly. Relax &amp; enjoy.
+              // /row mt
+              .row.mt
+                // SERVER STATUS PANELS
+                .col-md-4.col-sm-4.mb
+                  .white-panel.pn.donut-chart
+                    .white-header
+                      h5 SERVER LOAD
+                    .row
+                      .col-sm-6.col-xs-6.goleft
+                        p
+                          i.fa.fa-database
+                          |  70%
+                    canvas#serverstatus01(height='120', width='120')
+                    script.
+                      var doughnutData = [
+                      {
+                      value: 70,
+                      color:"#68dff0"
+                      },
+                      {
+                      value : 30,
+                      color : "#fdfdfd"
+                      }
+                      ];
+                      var myDoughnut = new Chart(document.getElementById("serverstatus01").getContext("2d")).Doughnut(doughnutData);
+                // /col-md-4
+                .col-md-4.col-sm-4.mb
+                  .white-panel.pn
+                    .white-header
+                      h5 TOP PRODUCT
+                    .row
+                      .col-sm-6.col-xs-6.goleft
+                        p
+                          i.fa.fa-heart
+                          |  122
+                      .col-sm-6.col-xs-6
+                    .centered
+                      img(src='assets/img/product.png', width='120')
+                // /col-md-4
+                .col-md-4.mb
+                  // WHITE PANEL - TOP USER
+                  .white-panel.pn
+                    .white-header
+                      h5 TOP USER
+                    p
+                      img.img-circle(src='assets/img/ui-zac.jpg', width='80')
+                    p
+                      b Zac Snider
+                    .row
+                      .col-md-6
+                        p.small.mt MEMBER SINCE
+                        p 2012
+                      .col-md-6
+                        p.small.mt TOTAL SPEND
+                        p $ 47,60
+                // /col-md-4
+              // /row
+              .row
+                // TWITTER PANEL
+                .col-md-4.mb
+                  .darkblue-panel.pn
+                    .darkblue-header
+                      h5 DROPBOX STATICS
+                    canvas#serverstatus02(height='120', width='120')
+                    script.
+                      var doughnutData = [
+                      {
+                      value: 60,
+                      color:"#68dff0"
+                      },
+                      {
+                      value : 40,
+                      color : "#444c57"
+                      }
+                      ];
+                      var myDoughnut = new Chart(document.getElementById("serverstatus02").getContext("2d")).Doughnut(doughnutData);
+                    p April 17, 2014
+                    footer
+                      .pull-left
+                        h5
+                          i.fa.fa-hdd-o
+                          |  17 GB
+                      .pull-right
+                        h5 60% Used
+                // /col-md-4
+                .col-md-4.mb
+                  // INSTAGRAM PANEL
+                  .instagram-panel.pn
+                    i.fa.fa-instagram.fa-4x
+                    p
+                      | @THISISYOU
+                      br
+                      | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;5 min. ago
+                    p
+                      i.fa.fa-comment
+                      |  18 |
+                      i.fa.fa-heart
+                      |  49
+                // /col-md-4
+                .col-md-4.col-sm-4.mb
+                  // REVENUE PANEL
+                  .darkblue-panel.pn
+                    .darkblue-header
+                      h5 REVENUE
+                    .chart.mt
+                      .sparkline(data-type='line', data-resize='true', data-height='75', data-width='90%', data-line-width='1', data-line-color='#fff', data-spot-color='#fff', data-fill-color='', data-highlight-line-color='#fff', data-spot-radius='4', data-data='[200,135,667,333,526,996,564,123,890,464,655]')
+                    p.mt
+                      b $ 17,980
+                      br
+                      | Month Income
+                // /col-md-4
+              // /row
+              .row.mt
+                // CUSTOM CHART START
+                .border-head
+                  h3 VISITS
+                .custom-bar-chart
+                  ul.y-axis
+                    li
+                      span 10.000
+                    li
+                      span 8.000
+                    li
+                      span 6.000
+                    li
+                      span 4.000
+                    li
+                      span 2.000
+                    li
+                      span 0
+                  .bar
+                    .title JAN
+                    .value.tooltips(data-original-title='8.500', data-toggle='tooltip', data-placement='top') 85%
+                  .bar
+                    .title FEB
+                    .value.tooltips(data-original-title='5.000', data-toggle='tooltip', data-placement='top') 50%
+                  .bar
+                    .title MAR
+                    .value.tooltips(data-original-title='6.000', data-toggle='tooltip', data-placement='top') 60%
+                  .bar
+                    .title APR
+                    .value.tooltips(data-original-title='4.500', data-toggle='tooltip', data-placement='top') 45%
+                  .bar
+                    .title MAY
+                    .value.tooltips(data-original-title='3.200', data-toggle='tooltip', data-placement='top') 32%
+                  .bar
+                    .title JUN
+                    .value.tooltips(data-original-title='6.200', data-toggle='tooltip', data-placement='top') 62%
+                  .bar
+                    .title JUL
+                    .value.tooltips(data-original-title='7.500', data-toggle='tooltip', data-placement='top') 75%
+                // custom chart end
+              // /row
+            // /col-lg-9 END SECTION MIDDLE
+      // main content end
+      // footer start
+      footer.site-footer
+        .text-center
+          | 2014 - Alvarez.is
+          a.go-top(href='index.html#')
+            i.fa.fa-angle-up
+      // footer end
+    // js placed at the end of the document so the pages load faster
+    script(src='https://code.jquery.com/jquery-1.12.4.min.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+    script.include(type='text/javascript', src='assets/js/jquery.dcjqaccordion.2.7.js')
+    script(src='assets/js/jquery.scrollTo.min.js')
+    //- script(src='assets/js/jquery.nicescroll.js', type='text/javascript')
+    script(src='assets/js/jquery.sparkline.js')
+    // common script for all pages
+    script(src='assets/js/common-scripts.js')
+    // script for this page
+    script(src='assets/js/sparkline-chart.js')
