--- a/views/index.pug
+++ b/views/index.pug
@@ -90,43 +90,45 @@ html(lang='en')
                   p Your server is working perfectly. Relax &amp; enjoy.
               // /row mt
               .row.mt
-                // SERVER STATUS PANELS
-                .col-md-4.col-sm-4.mb
-                  .white-panel.pn.donut-chart
-                    .white-header
-                      h5 SERVER LOAD
-                    .row
-                      .col-sm-6.col-xs-6.goleft
-                        p
-                          i.fa.fa-database
-                          |  70%
-                    canvas#serverstatus01(height='120', width='120')
-                    script.
-                      var doughnutData = [
-                      {
-                      value: 70,
-                      color:"#68dff0"
-                      },
-                      {
-                      value : 30,
-                      color : "#fdfdfd"
-                      }
-                      ];
-                      var myDoughnut = new Chart(document.getElementById("serverstatus01").getContext("2d")).Doughnut(doughnutData);
-                // /col-md-4
-                .col-md-4.col-sm-4.mb
+                .col-md-4.col-sm-6.mb
                   .white-panel.pn
                     .white-header
-                      h5 TOP PRODUCT
+                      h5 TOP DESTINATIONS
                     .row
-                      .col-sm-6.col-xs-6.goleft
-                        p
-                          i.fa.fa-heart
-                          |  122
-                      .col-sm-6.col-xs-6
-                    .centered
-                      img(src='assets/img/product.png', width='120')
-                // /col-md-4
+                      .col-xs-12
+                        table.table.table-striped
+                          tbody.text-center
+                            - for (var i = 0; i < incoming.topKeys.length; i++)
+                              tr
+                                td=incoming.topKeys[i]
+                                td=incoming.topValues[i]
+
+                .col-md-4.col-sm-6.mb
+                  .white-panel.pn
+                    .white-header
+                      h5 TOP CAUGHT ADS
+                    .row
+                      .col-xs-12
+                        table.table.table-striped
+                          tbody.text-center
+                            - for (var i = 0; i < caught.topKeys.length; i++)
+                              tr
+                                td=caught.topKeys[i]
+                                td=caught.topValues[i]
+
+                .col-md-4.col-sm-6.mb
+                  .white-panel.pn
+                    .white-header
+                      h5 SERVER STATISTICS
+                    .row
+                      .col-xs-12
+                        table.table.table-striped
+                          tbody.text-center
+                            each val, name in statistics
+                              tr
+                                td=name
+                                td=val
+
                 .col-md-4.col-sm-4.mb
                   // WHITE PANEL - TOP USER
                   .white-panel.pn
