Add percentage view

--- a/views/index.pug
+++ b/views/index.pug
@@ -102,6 +102,7 @@ html(lang='en')
                               tr
                                 td=incoming.topKeys[i]
                                 td=incoming.topValues[i]
+                                td=incoming.topPercent[i]
 
                 .col-md-4.col-sm-6.mb
                   .white-panel.pn
@@ -115,6 +116,7 @@ html(lang='en')
                               tr
                                 td=caught.topKeys[i]
                                 td=caught.topValues[i]
+                                td=caught.topPercent[i]
 
                 .col-md-4.col-sm-6.mb
                   .white-panel.pn
@@ -128,6 +130,7 @@ html(lang='en')
                               tr
                                 td=sources.topKeys[i]
                                 td=sources.topValues[i]
+                                td=sources.topPercent[i]
 
                 .col-md-4.col-sm-6.mb
                   .white-panel.pn
