--- a/views/index.pug
+++ b/views/index.pug
@@ -90,7 +90,7 @@ html(lang='en')
                   p Your server is working perfectly. Relax &amp; enjoy.
               // /row mt
               .row.mt
-                .col-md-4.col-sm-6.mb
+                .col-md-6.col-sm-6.mb
                   .white-panel.pn
                     .white-header
                       h5 TOP DESTINATIONS
@@ -104,7 +104,7 @@ html(lang='en')
                                 td=incoming.topValues[i]
                                 td=incoming.topPercent[i]
 
-                .col-md-4.col-sm-6.mb
+                .col-md-6.col-sm-6.mb
                   .white-panel.pn
                     .white-header
                       h5 TOP CAUGHT ADS
@@ -145,121 +145,32 @@ html(lang='en')
                                 td=name
                                 td=val
 
-                .col-md-4.col-sm-4.mb
-                  // WHITE PANEL - TOP USER
-                  .white-panel.pn
-                    .white-header
-                      h5 TOP USER
-                    p
-                      img.img-circle(src='assets/img/ui-zac.jpg', width='80')
-                    p
-                      b Zac Snider
-                    .row
-                      .col-md-6
-                        p.small.mt MEMBER SINCE
-                        p 2012
-                      .col-md-6
-                        p.small.mt TOTAL SPEND
-                        p $ 47,60
-                // /col-md-4
-              // /row
               .row
-                // TWITTER PANEL
                 .col-md-4.col-sm-4.mb
                   .darkblue-panel.pn
                     .darkblue-header
-                      h5 DROPBOX STATICS
-                    canvas#serverstatus02(height='120', width='120')
+                      h5 TRAFFIC TYPE
+                    canvas#trafficType(height='120', width='120')
                     script.
-                      var doughnutData = [
-                      {
-                      value: 60,
-                      color:"#68dff0"
-                      },
-                      {
-                      value : 40,
-                      color : "#444c57"
-                      }
-                      ];
-                      var myDoughnut = new Chart(document.getElementById("serverstatus02").getContext("2d")).Doughnut(doughnutData);
-                    p April 17, 2014
+                      var trafficData = [
+                        { value : #{incoming.total - caught.total}
+                        , color : '#97200F'
+                        }
+                      , { value: #{caught.total}
+                        , color:'#68dff0'
+                        }
+                      ]
+                      var trafficType = new Chart(document.getElementById('trafficType').getContext('2d')).Doughnut(trafficData)
                     footer
-                      .pull-left
+                      .pull-left.text-left
                         h5
-                          i.fa.fa-hdd-o
-                          |  17 GB
-                      .pull-right
-                        h5 60% Used
+                          i.fa.fa-square(style='color: #97200F;')
+                          |&nbsp;All Requests
+                        h5
+                          i.fa.fa-square(style='color: #68dff0;')
+                          |&nbsp;Requests Caught
+
                 // /col-md-4
-                .col-md-4.col-sm-4.mb
-                  // INSTAGRAM PANEL
-                  .instagram-panel.pn
-                    i.fa.fa-instagram.fa-4x
-                    p
-                      | @THISISYOU
-                      br
-                      | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;5 min. ago
-                    p
-                      i.fa.fa-comment
-                      |  18 |
-                      i.fa.fa-heart
-                      |  49
-                // /col-md-4
-                .col-md-4.col-sm-4.mb
-                  // REVENUE PANEL
-                  .darkblue-panel.pn
-                    .darkblue-header
-                      h5 REVENUE
-                    .chart.mt
-                      .sparkline(data-type='line', data-resize='true', data-height='75', data-width='90%', data-line-width='1', data-line-color='#fff', data-spot-color='#fff', data-fill-color='', data-highlight-line-color='#fff', data-spot-radius='4', data-data='[200,135,667,333,526,996,564,123,890,464,655]')
-                    p.mt
-                      b $ 17,980
-                      br
-                      | Month Income
-                // /col-md-4
-              // /row
-              .row.mt
-                // CUSTOM CHART START
-                .border-head
-                  h3 VISITS
-                .custom-bar-chart
-                  ul.y-axis
-                    li
-                      span 10.000
-                    li
-                      span 8.000
-                    li
-                      span 6.000
-                    li
-                      span 4.000
-                    li
-                      span 2.000
-                    li
-                      span 0
-                  .bar
-                    .title JAN
-                    .value.tooltips(data-original-title='8.500', data-toggle='tooltip', data-placement='top') 85%
-                  .bar
-                    .title FEB
-                    .value.tooltips(data-original-title='5.000', data-toggle='tooltip', data-placement='top') 50%
-                  .bar
-                    .title MAR
-                    .value.tooltips(data-original-title='6.000', data-toggle='tooltip', data-placement='top') 60%
-                  .bar
-                    .title APR
-                    .value.tooltips(data-original-title='4.500', data-toggle='tooltip', data-placement='top') 45%
-                  .bar
-                    .title MAY
-                    .value.tooltips(data-original-title='3.200', data-toggle='tooltip', data-placement='top') 32%
-                  .bar
-                    .title JUN
-                    .value.tooltips(data-original-title='6.200', data-toggle='tooltip', data-placement='top') 62%
-                  .bar
-                    .title JUL
-                    .value.tooltips(data-original-title='7.500', data-toggle='tooltip', data-placement='top') 75%
-                // custom chart end
-              // /row
-            // /col-lg-9 END SECTION MIDDLE
       // main content end
       // footer start
       footer.site-footer
