Remove mentions of 'ad domains', rename to just 'domains'

--- a/views/index.pug
+++ b/views/index.pug
@@ -87,7 +87,7 @@ html(lang='en')
               .col-md-2.col-sm-2.box0
                 .box1
                   span.fa.fa-list
-                  h3=adUrls
+                  h3=blockedUrls
                 p Domains blocked
               .col-md-2.col-sm-2.box0
                 if error
